--- a/2025/2025.ipynb
+++ b/2025/2025.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "id": "3eeef51a",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import heapq\n",
+    "import bisect\n",
     "import math\n",
     "from typing import Callable, TypeVar\n",
     "from collections import Counter, deque, defaultdict\n",
@@ -17,6 +18,7 @@
     "from functools import cmp_to_key, cache, lru_cache\n",
     "from concurrent.futures import ThreadPoolExecutor\n",
     "import networkx as nx\n",
+    "from sortedcontainers import SortedDict\n",
     "\n",
     "np.set_printoptions(edgeitems=30, linewidth=100000, \n",
     "    formatter=dict(float=lambda x: \"%.3g\" % x))\n",
@@ -279,20 +281,464 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b47078bb",
+   "id": "5084e0d0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d1c722d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@lru_cache()\n",
+    "def contributions(y, x):\n",
+    "    split = bisect.bisect_left(splits[x], y)\n",
+    "    if split < len(splits[x]):\n",
+    "        newy = splits[x][split]\n",
+    "        splitted[(newy, x)] += 1\n",
+    "\n",
+    "contributions(*tuple(np.argwhere(teleports == 'S')[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "83b154ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "teleports = np.array(data(7, list))\n",
+    "# splits = set(tuple(x) for x in np.argwhere(teleports == '^'))\n",
+    "# end = max(splits, key=lambda x: x[0])[0]\n",
+    "\n",
+    "\n",
+    "splits = defaultdict(lambda: [])\n",
+    "for x in np.argwhere(teleports == '^'):\n",
+    "    heapq.heappush(splits[x[1]], (x[0]))\n",
+    "end = max(splits.keys())\n",
+    "# splits, end\n",
+    "\n",
+    "splitted = defaultdict(lambda: 0)\n",
+    "visited = defaultdict(lambda: [])\n",
+    "start = tuple(np.argwhere(teleports == 'S')[0])\n",
+    "ends = []\n",
+    "frontier = [(*start, start)]\n",
+    "while frontier:\n",
+    "    y, x, source = heapq.heappop(frontier)\n",
+    "    if (y, x) in visited:\n",
+    "        visited[(y, x)].append(source)\n",
+    "        continue\n",
+    "    visited[(y, x)] = [source]\n",
+    "    split = bisect.bisect_left(splits[x], y)\n",
+    "    if split < len(splits[x]):\n",
+    "        newy = splits[x][split]\n",
+    "        splitted[(newy, x)] += 1\n",
+    "        heapq.heappush(frontier, (newy, x-1, (y, x)))\n",
+    "        heapq.heappush(frontier, (newy, x+1, (y, x)))\n",
+    "    else:\n",
+    "        ends.append((y, x))\n",
+    "\n",
+    "# len(splitted), splitted, visited"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "359f604d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function __main__.day7()>"
+       "40"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "@lru_cache()\n",
+    "def contributions(x):\n",
+    "    if not x[0]:\n",
+    "        return 1\n",
+    "    return sum(contributions(i) for i in visited[x])\n",
+    "\n",
+    "sum(contributions(i) for i in ends)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89e84c21",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6,\n",
+       " defaultdict(<function __main__.<lambda>()>,\n",
+       "             {(np.int64(2), np.int64(7)): 1,\n",
+       "              (np.int64(4), np.int64(6)): 1,\n",
+       "              (np.int64(4), np.int64(8)): 1,\n",
+       "              (np.int64(6), np.int64(5)): 1,\n",
+       "              (np.int64(6), np.int64(7)): 1,\n",
+       "              (np.int64(6), np.int64(9)): 1}),\n",
+       " defaultdict(<function __main__.<lambda>()>,\n",
+       "             {(np.int64(0), np.int64(7)): 1,\n",
+       "              (np.int64(2), np.int64(6)): 1,\n",
+       "              (np.int64(2), np.int64(8)): 1,\n",
+       "              (np.int64(4), np.int64(5)): 1,\n",
+       "              (np.int64(4), np.int64(7)): 2,\n",
+       "              (np.int64(4), np.int64(9)): 1,\n",
+       "              (np.int64(6), np.int64(4)): 1,\n",
+       "              (np.int64(6), np.int64(6)): 2,\n",
+       "              (np.int64(6), np.int64(8)): 2,\n",
+       "              (np.int64(6), np.int64(10)): 1}),\n",
+       " 4)"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "teleports = np.array(data(7, list))\n",
+    "# splits = set(tuple(x) for x in np.argwhere(teleports == '^'))\n",
+    "# end = max(splits, key=lambda x: x[0])[0]\n",
+    "\n",
+    "\n",
+    "splits = defaultdict(lambda: [])\n",
+    "for x in np.argwhere(teleports == '^'):\n",
+    "    heapq.heappush(splits[x[1]], (x[0]))\n",
+    "end = max(splits.keys())\n",
+    "# splits, end\n",
+    "\n",
+    "splitted = defaultdict(lambda: 0)\n",
+    "visited = defaultdict(lambda: 0)\n",
+    "test = 0\n",
+    "ends = []\n",
+    "frontier = [tuple(np.argwhere(teleports == 'S')[0])]\n",
+    "while frontier:\n",
+    "    y, x = heapq.heappop(frontier)\n",
+    "    if (y, x) in visited:\n",
+    "        # print('?', y, x)\n",
+    "        visited[(y, x)] += 1\n",
+    "        continue\n",
+    "    visited[(y, x)] = 1\n",
+    "    split = bisect.bisect_left(splits[x], y)\n",
+    "    if split < len(splits[x]):\n",
+    "        newy = splits[x][split]\n",
+    "        splitted[(newy, x)] += 1\n",
+    "        heapq.heappush(frontier, (newy, x-1))\n",
+    "        heapq.heappush(frontier, (newy, x+1))\n",
+    "    else:\n",
+    "        ends[(y, x)].append()\n",
+    "        test += 1\n",
+    "    # break\n",
+    "#     if y == end:\n",
+    "#         continue\n",
+    "#     if (new := (y+1, x)) in splits:\n",
+    "#         splitted.add(new)\n",
+    "#         heapq.heappush(frontier, (y+1, x-1))\n",
+    "#         heapq.heappush(frontier, (y+1, x+1))\n",
+    "#     else:\n",
+    "#         heapq.heappush(frontier, (y+1, x))\n",
+    "len(splitted), splitted, visited, test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "eb184462",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(<function __main__.<lambda>()>,\n",
+       "            {(np.int64(0), np.int64(7)): 1,\n",
+       "             (np.int64(2), np.int64(6)): 1,\n",
+       "             (np.int64(2), np.int64(8)): 1,\n",
+       "             (np.int64(4), np.int64(5)): 1,\n",
+       "             (np.int64(4), np.int64(7)): 2,\n",
+       "             (np.int64(4), np.int64(9)): 1,\n",
+       "             (np.int64(6), np.int64(4)): 1,\n",
+       "             (np.int64(6), np.int64(6)): 2,\n",
+       "             (np.int64(6), np.int64(8)): 2,\n",
+       "             (np.int64(6), np.int64(10)): 1})"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "visited"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "82fc69fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(np.int64(6), np.int64(4)),\n",
+       " (np.int64(6), np.int64(6)),\n",
+       " (np.int64(6), np.int64(8)),\n",
+       " (np.int64(6), np.int64(10))]"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ends"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "cd90952e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(visited[i] for i in ends)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "8295f3a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(np.int64(6), np.int64(4)),\n",
+       " (np.int64(6), np.int64(6)),\n",
+       " (np.int64(6), np.int64(8)),\n",
+       " (np.int64(6), np.int64(10))]"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ends"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "de50040c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(<function __main__.<lambda>()>,\n",
+       "            {(np.int64(0), np.int64(7)): 1,\n",
+       "             (np.int64(2), np.int64(6)): 1,\n",
+       "             (np.int64(2), np.int64(8)): 1,\n",
+       "             (np.int64(4), np.int64(5)): 1,\n",
+       "             (np.int64(4), np.int64(7)): 2,\n",
+       "             (np.int64(4), np.int64(9)): 1,\n",
+       "             (np.int64(6), np.int64(4)): 1,\n",
+       "             (np.int64(6), np.int64(6)): 2,\n",
+       "             (np.int64(6), np.int64(8)): 2,\n",
+       "             (np.int64(6), np.int64(10)): 1,\n",
+       "             (np.int64(8), np.int64(3)): 1,\n",
+       "             (np.int64(8), np.int64(5)): 2,\n",
+       "             (np.int64(8), np.int64(7)): 1,\n",
+       "             (np.int64(8), np.int64(9)): 1,\n",
+       "             (np.int64(8), np.int64(11)): 1,\n",
+       "             (np.int64(10), np.int64(2)): 1,\n",
+       "             (np.int64(10), np.int64(4)): 2,\n",
+       "             (np.int64(10), np.int64(6)): 1,\n",
+       "             (np.int64(10), np.int64(8)): 1,\n",
+       "             (np.int64(10), np.int64(10)): 2,\n",
+       "             (np.int64(10), np.int64(12)): 1,\n",
+       "             (np.int64(12), np.int64(1)): 1,\n",
+       "             (np.int64(12), np.int64(3)): 1,\n",
+       "             (np.int64(12), np.int64(5)): 1,\n",
+       "             (np.int64(12), np.int64(7)): 1,\n",
+       "             (np.int64(12), np.int64(11)): 1,\n",
+       "             (np.int64(12), np.int64(13)): 1,\n",
+       "             (np.int64(14), np.int64(0)): 1,\n",
+       "             (np.int64(14), np.int64(2)): 2,\n",
+       "             (np.int64(14), np.int64(4)): 2,\n",
+       "             (np.int64(14), np.int64(6)): 3,\n",
+       "             (np.int64(14), np.int64(8)): 2,\n",
+       "             (np.int64(14), np.int64(12)): 1,\n",
+       "             (np.int64(14), np.int64(14)): 1})"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "visited"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "67315a1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(visited.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "9e09c352",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'collections.defaultdict' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[97]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mvisited\u001b[49m\u001b[43m+\u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43msplitted\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mTypeError\u001b[39m: unsupported operand type(s) for +: 'collections.defaultdict' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "visited+len(splitted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "069e9036",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(<function __main__.<lambda>()>,\n",
+       "            {(np.int64(2), np.int64(7)): 1,\n",
+       "             (np.int64(4), np.int64(6)): 1,\n",
+       "             (np.int64(4), np.int64(8)): 1,\n",
+       "             (np.int64(6), np.int64(5)): 1,\n",
+       "             (np.int64(6), np.int64(7)): 1,\n",
+       "             (np.int64(6), np.int64(9)): 1,\n",
+       "             (np.int64(8), np.int64(4)): 1,\n",
+       "             (np.int64(8), np.int64(6)): 1,\n",
+       "             (np.int64(8), np.int64(10)): 1,\n",
+       "             (np.int64(10), np.int64(3)): 1,\n",
+       "             (np.int64(10), np.int64(5)): 1,\n",
+       "             (np.int64(14), np.int64(7)): 2,\n",
+       "             (np.int64(10), np.int64(9)): 1,\n",
+       "             (np.int64(10), np.int64(11)): 1,\n",
+       "             (np.int64(12), np.int64(2)): 1,\n",
+       "             (np.int64(12), np.int64(6)): 1,\n",
+       "             (np.int64(12), np.int64(12)): 1,\n",
+       "             (np.int64(14), np.int64(1)): 1,\n",
+       "             (np.int64(14), np.int64(3)): 1,\n",
+       "             (np.int64(14), np.int64(5)): 1,\n",
+       "             (np.int64(14), np.int64(13)): 1})"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "splitted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "c35361a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(splits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "01053e4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2  4  4  6  6  6  8  8  8 10 10 10 10 12 12 12 14 14 14 14 14 14]\n",
+      "[ 7  6  8  5  7  9  4  6 10  3  5  9 11  2  6 12  1  3  5  7  9 13]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in splits:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "b47078bb",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def day7():\n",
     "    return\n",
